// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Settings Menu Settings Menu: should render properly user is logged in 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#000000",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 2,
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 15,
                "marginTop": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "paddingHorizontal": 50,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "backgroundColor": "rgba(255, 255, 255, 0)",
                      "borderBottomColor": "#FFFFFF",
                      "color": "#FFFFFF",
                      "fontFamily": "Menlo-Regular",
                      "fontSize": 16,
                      "fontWeight": "300",
                    },
                    Object {
                      "opacity": 0,
                    },
                  ]
                }
              >
                SETTINGS
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              constrainWidth={750}
              source={
                Object {
                  "uri": undefined,
                }
              }
            >
              <View>
                <BVLinearGradient
                  colors={
                    Array [
                      16777215,
                      16777215,
                      16777215,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  locations={null}
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  style={
                    Object {
                      "paddingBottom": 15,
                      "paddingHorizontal": 15,
                      "paddingTop": 75,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "backgroundColor": "rgba(255, 255, 255, 0)",
                          "color": "rgb(30, 30, 30)",
                          "fontSize": 22,
                          "fontWeight": "700",
                        },
                        undefined,
                      ]
                    }
                  >
                    Settings
                  </Text>
                </BVLinearGradient>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateY": 100,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RCTScrollView
              onScroll={[Function]}
              scrollEventThrottle={16}
              showsVerticalScrollIndicator={false}
            >
              <View>
                <View
                  style={
                    Object {
                      "paddingTop": 1334,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "paddingBottom": 100,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "paddingVertical": 15,
                        },
                        undefined,
                        Object {
                          "marginBottom": 7.5,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "paddingHorizontal": 15,
                          "paddingVertical": 7.5,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "backgroundColor": "rgba(255, 255, 255, 0)",
                            "color": "#000000",
                            "fontSize": 14,
                            "fontWeight": "600",
                          }
                        }
                      >
                        Orders
                      </Text>
                    </View>
                    <View
                      style={Object {}}
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flexBasis": 150,
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "paddingHorizontal": 15,
                                "paddingVertical": 10,
                              },
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "marginRight": 15,
                              }
                            }
                          >
                            <View
                              style={Object {}}
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "rgba(255, 255, 255, 0)",
                                      "color": "rgb(30, 30, 30)",
                                      "fontSize": 14,
                                      "fontWeight": "300",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Order history
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={false}
                                ellipsizeMode="tail"
                                style={
                                  Array [
                                    Object {
                                      "color": "#999999",
                                      "fontSize": 16,
                                    },
                                    undefined,
                                    Object {
                                      "fontFamily": "Material Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "paddingVertical": 15,
                        },
                        undefined,
                        Object {
                          "marginBottom": 7.5,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "paddingHorizontal": 15,
                          "paddingVertical": 7.5,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "backgroundColor": "rgba(255, 255, 255, 0)",
                            "color": "#000000",
                            "fontSize": 14,
                            "fontWeight": "600",
                          }
                        }
                      >
                        Display
                      </Text>
                    </View>
                    <View
                      style={Object {}}
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "flexBasis": 150,
                              },
                              undefined,
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "paddingHorizontal": 15,
                                  "paddingVertical": 10,
                                },
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginRight": 15,
                                }
                              }
                            >
                              <View
                                style={Object {}}
                              >
                                <Text
                                  accessible={true}
                                  allowFontScaling={true}
                                  ellipsizeMode="tail"
                                  numberOfLines={1}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "rgba(255, 255, 255, 0)",
                                        "color": "rgb(30, 30, 30)",
                                        "fontSize": 14,
                                        "fontWeight": "300",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Currency
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "justifyContent": "space-between",
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "flex-end",
                                      "flex": 1,
                                    }
                                  }
                                >
                                  <Text
                                    accessible={true}
                                    allowFontScaling={true}
                                    ellipsizeMode="tail"
                                    style={
                                      Object {
                                        "backgroundColor": "rgba(255, 255, 255, 0)",
                                        "color": "#000000",
                                        "flex": 1,
                                        "fontSize": 14,
                                      }
                                    }
                                  >
                                    US Dollar (USD $)
                                  </Text>
                                </View>
                                <View
                                  style={
                                    Object {
                                      "marginLeft": 7.5,
                                    }
                                  }
                                >
                                  <Text
                                    accessible={true}
                                    allowFontScaling={false}
                                    ellipsizeMode="tail"
                                    style={
                                      Array [
                                        Object {
                                          "color": "#999999",
                                          "fontSize": 16,
                                        },
                                        undefined,
                                        Object {
                                          "fontFamily": "Material Icons",
                                          "fontStyle": "normal",
                                          "fontWeight": "normal",
                                        },
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "paddingVertical": 15,
                        },
                        undefined,
                        Object {
                          "marginBottom": 7.5,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "paddingHorizontal": 15,
                          "paddingVertical": 7.5,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "backgroundColor": "rgba(255, 255, 255, 0)",
                            "color": "#000000",
                            "fontSize": 14,
                            "fontWeight": "600",
                          }
                        }
                      >
                        Account
                      </Text>
                    </View>
                    <View
                      style={Object {}}
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flexBasis": 150,
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "paddingHorizontal": 15,
                                "paddingVertical": 10,
                              },
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "marginRight": 15,
                              }
                            }
                          >
                            <View
                              style={Object {}}
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "rgba(255, 255, 255, 0)",
                                      "color": "rgb(30, 30, 30)",
                                      "fontSize": 14,
                                      "fontWeight": "300",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Browsing history
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={false}
                                ellipsizeMode="tail"
                                style={
                                  Array [
                                    Object {
                                      "color": "#999999",
                                      "fontSize": 16,
                                    },
                                    undefined,
                                    Object {
                                      "fontFamily": "Material Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <View>
                        <View
                          accessible={true}
                          isTVSelectable={true}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "flexBasis": 150,
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "paddingHorizontal": 15,
                                  "paddingVertical": 10,
                                },
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginRight": 15,
                                }
                              }
                            >
                              <View
                                style={Object {}}
                              >
                                <Text
                                  accessible={true}
                                  allowFontScaling={true}
                                  ellipsizeMode="tail"
                                  numberOfLines={1}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "rgba(255, 255, 255, 0)",
                                        "color": "rgb(30, 30, 30)",
                                        "fontSize": 14,
                                        "fontWeight": "300",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Saved addresses
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "flex-end",
                                    "flex": 1,
                                    "justifyContent": "center",
                                  }
                                }
                              >
                                <Text
                                  accessible={true}
                                  allowFontScaling={false}
                                  ellipsizeMode="tail"
                                  style={
                                    Array [
                                      Object {
                                        "color": "#999999",
                                        "fontSize": 16,
                                      },
                                      undefined,
                                      Object {
                                        "fontFamily": "Material Icons",
                                        "fontStyle": "normal",
                                        "fontWeight": "normal",
                                      },
                                    ]
                                  }
                                >
                                  
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View
                          accessible={true}
                          isTVSelectable={true}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexBasis": 150,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "#FFFFFF",
                                    "paddingHorizontal": 15,
                                    "paddingVertical": 10,
                                  },
                                  Object {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "justifyContent": "space-between",
                                  },
                                ]
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "marginRight": 15,
                                  }
                                }
                              >
                                <View
                                  style={Object {}}
                                >
                                  <Text
                                    accessible={true}
                                    allowFontScaling={true}
                                    ellipsizeMode="tail"
                                    numberOfLines={1}
                                    style={
                                      Object {
                                        "backgroundColor": "rgba(255, 255, 255, 0)",
                                        "color": "#FF0000",
                                        "fontSize": 14,
                                        "fontWeight": "300",
                                      }
                                    }
                                  >
                                    This field is required
                                  </Text>
                                </View>
                              </View>
                              <View
                                style={
                                  Object {
                                    "flex": 1,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "center",
                                      "flexDirection": "row",
                                      "justifyContent": "space-between",
                                    }
                                  }
                                >
                                  <View
                                    style={
                                      Object {
                                        "alignItems": "flex-end",
                                        "flex": 1,
                                      }
                                    }
                                  >
                                    <Text
                                      accessible={true}
                                      allowFontScaling={true}
                                      ellipsizeMode="tail"
                                      style={
                                        Object {
                                          "backgroundColor": "rgba(255, 255, 255, 0)",
                                          "color": "#000000",
                                          "flex": 1,
                                          "fontSize": 14,
                                        }
                                      }
                                    >
                                      Not selected
                                    </Text>
                                  </View>
                                  <View
                                    style={
                                      Object {
                                        "marginLeft": 7.5,
                                      }
                                    }
                                  >
                                    <Text
                                      accessible={true}
                                      allowFontScaling={false}
                                      ellipsizeMode="tail"
                                      style={
                                        Array [
                                          Object {
                                            "color": "#999999",
                                            "fontSize": 16,
                                          },
                                          undefined,
                                          Object {
                                            "fontFamily": "Material Icons",
                                            "fontStyle": "normal",
                                            "fontWeight": "normal",
                                          },
                                        ]
                                      }
                                    >
                                      
                                    </Text>
                                  </View>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "paddingVertical": 15,
                        },
                        undefined,
                        Object {
                          "marginBottom": 7.5,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "paddingHorizontal": 15,
                          "paddingVertical": 7.5,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "backgroundColor": "rgba(255, 255, 255, 0)",
                            "color": "#000000",
                            "fontSize": 14,
                            "fontWeight": "600",
                          }
                        }
                      >
                        Legal
                      </Text>
                    </View>
                    <View
                      style={Object {}}
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flexBasis": 150,
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "paddingHorizontal": 15,
                                "paddingVertical": 10,
                              },
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "marginRight": 15,
                              }
                            }
                          >
                            <View
                              style={Object {}}
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "rgba(255, 255, 255, 0)",
                                      "color": "rgb(30, 30, 30)",
                                      "fontSize": 14,
                                      "fontWeight": "300",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Privacy policy
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={false}
                                ellipsizeMode="tail"
                                style={
                                  Array [
                                    Object {
                                      "color": "#999999",
                                      "fontSize": 16,
                                    },
                                    undefined,
                                    Object {
                                      "fontFamily": "Material Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flexBasis": 150,
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "paddingHorizontal": 15,
                                "paddingVertical": 10,
                              },
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "marginRight": 15,
                              }
                            }
                          >
                            <View
                              style={Object {}}
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "rgba(255, 255, 255, 0)",
                                      "color": "rgb(30, 30, 30)",
                                      "fontSize": 14,
                                      "fontWeight": "300",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Terms and conditions
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={false}
                                ellipsizeMode="tail"
                                style={
                                  Array [
                                    Object {
                                      "color": "#999999",
                                      "fontSize": 16,
                                    },
                                    undefined,
                                    Object {
                                      "fontFamily": "Material Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#FFFFFF",
                            "paddingHorizontal": 15,
                            "paddingVertical": 10,
                          },
                          Object {
                            "alignItems": "center",
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "marginRight": 15,
                          }
                        }
                      >
                        <View
                          style={Object {}}
                        >
                          <Text
                            accessible={true}
                            allowFontScaling={true}
                            ellipsizeMode="tail"
                            numberOfLines={1}
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "rgba(255, 255, 255, 0)",
                                  "color": "rgb(30, 30, 30)",
                                  "fontSize": 14,
                                  "fontWeight": "300",
                                },
                                Object {
                                  "color": "#000000",
                                  "fontWeight": "600",
                                },
                              ]
                            }
                          >
                            Sign out of your account
                          </Text>
                        </View>
                      </View>
                      <View
                        style={
                          Object {
                            "flex": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "alignItems": "flex-end",
                              "flex": 1,
                              "justifyContent": "center",
                            }
                          }
                        >
                          <Text
                            accessible={true}
                            allowFontScaling={false}
                            ellipsizeMode="tail"
                            style={
                              Array [
                                Object {
                                  "color": "#999999",
                                  "fontSize": 16,
                                },
                                undefined,
                                Object {
                                  "fontFamily": "Material Icons",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                              ]
                            }
                          >
                            
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "marginVertical": 7.5,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "backgroundColor": "rgba(255, 255, 255, 0)",
                          "color": "#999999",
                          "fontSize": 12,
                          "fontWeight": "300",
                        }
                      }
                    >
                      Build 9999
                    </Text>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`Settings Menu Settings Menu: should render properly when user is not logged in 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#000000",
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 2,
              },
              Object {
                "opacity": 0,
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
                "marginBottom": 15,
                "marginTop": 30,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "paddingHorizontal": 50,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                numberOfLines={1}
                style={
                  Array [
                    Object {
                      "backgroundColor": "rgba(255, 255, 255, 0)",
                      "borderBottomColor": "#FFFFFF",
                      "color": "#FFFFFF",
                      "fontFamily": "Menlo-Regular",
                      "fontSize": 16,
                      "fontWeight": "300",
                    },
                    Object {
                      "opacity": 0,
                    },
                  ]
                }
              >
                SETTINGS
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "flex": 1,
              },
              Object {
                "opacity": 1,
              },
            ]
          }
        >
          <View
            onLayout={[Function]}
          >
            <View
              constrainWidth={750}
              source={
                Object {
                  "uri": undefined,
                }
              }
            >
              <View>
                <BVLinearGradient
                  colors={
                    Array [
                      16777215,
                      16777215,
                      16777215,
                    ]
                  }
                  endPoint={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  locations={null}
                  startPoint={
                    Object {
                      "x": 0,
                      "y": 1,
                    }
                  }
                  style={
                    Object {
                      "paddingBottom": 15,
                      "paddingHorizontal": 15,
                      "paddingTop": 75,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "backgroundColor": "rgba(255, 255, 255, 0)",
                          "color": "rgb(30, 30, 30)",
                          "fontSize": 22,
                          "fontWeight": "700",
                        },
                        undefined,
                      ]
                    }
                  >
                    Settings
                  </Text>
                </BVLinearGradient>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "transform": Array [
                Object {
                  "translateY": 100,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <RCTScrollView
              onScroll={[Function]}
              scrollEventThrottle={16}
              showsVerticalScrollIndicator={false}
            >
              <View>
                <View
                  style={
                    Object {
                      "paddingTop": 1334,
                    }
                  }
                />
                <View
                  style={
                    Object {
                      "paddingBottom": 100,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "paddingVertical": 15,
                        },
                        undefined,
                        Object {
                          "marginBottom": 7.5,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "paddingHorizontal": 15,
                          "paddingVertical": 7.5,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "backgroundColor": "rgba(255, 255, 255, 0)",
                            "color": "#000000",
                            "fontSize": 14,
                            "fontWeight": "600",
                          }
                        }
                      >
                        Display
                      </Text>
                    </View>
                    <View
                      style={Object {}}
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "flexBasis": 150,
                              },
                              undefined,
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "paddingHorizontal": 15,
                                  "paddingVertical": 10,
                                },
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginRight": 15,
                                }
                              }
                            >
                              <View
                                style={Object {}}
                              >
                                <Text
                                  accessible={true}
                                  allowFontScaling={true}
                                  ellipsizeMode="tail"
                                  numberOfLines={1}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "rgba(255, 255, 255, 0)",
                                        "color": "rgb(30, 30, 30)",
                                        "fontSize": 14,
                                        "fontWeight": "300",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Currency
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "center",
                                    "flexDirection": "row",
                                    "justifyContent": "space-between",
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "alignItems": "flex-end",
                                      "flex": 1,
                                    }
                                  }
                                >
                                  <Text
                                    accessible={true}
                                    allowFontScaling={true}
                                    ellipsizeMode="tail"
                                    style={
                                      Object {
                                        "backgroundColor": "rgba(255, 255, 255, 0)",
                                        "color": "#000000",
                                        "flex": 1,
                                        "fontSize": 14,
                                      }
                                    }
                                  >
                                    US Dollar (USD $)
                                  </Text>
                                </View>
                                <View
                                  style={
                                    Object {
                                      "marginLeft": 7.5,
                                    }
                                  }
                                >
                                  <Text
                                    accessible={true}
                                    allowFontScaling={false}
                                    ellipsizeMode="tail"
                                    style={
                                      Array [
                                        Object {
                                          "color": "#999999",
                                          "fontSize": 16,
                                        },
                                        undefined,
                                        Object {
                                          "fontFamily": "Material Icons",
                                          "fontStyle": "normal",
                                          "fontWeight": "normal",
                                        },
                                      ]
                                    }
                                  >
                                    
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "paddingVertical": 15,
                        },
                        undefined,
                        Object {
                          "marginBottom": 7.5,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "paddingHorizontal": 15,
                          "paddingVertical": 7.5,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "backgroundColor": "rgba(255, 255, 255, 0)",
                            "color": "#000000",
                            "fontSize": 14,
                            "fontWeight": "600",
                          }
                        }
                      >
                        Account
                      </Text>
                    </View>
                    <View
                      style={Object {}}
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flexBasis": 150,
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "paddingHorizontal": 15,
                                "paddingVertical": 10,
                              },
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "marginRight": 15,
                              }
                            }
                          >
                            <View
                              style={Object {}}
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "rgba(255, 255, 255, 0)",
                                      "color": "rgb(30, 30, 30)",
                                      "fontSize": 14,
                                      "fontWeight": "300",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Browsing history
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={false}
                                ellipsizeMode="tail"
                                style={
                                  Array [
                                    Object {
                                      "color": "#999999",
                                      "fontSize": 16,
                                    },
                                    undefined,
                                    Object {
                                      "fontFamily": "Material Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <View>
                        <View
                          accessible={true}
                          isTVSelectable={true}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "flexBasis": 150,
                              "opacity": 1,
                            }
                          }
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "backgroundColor": "#FFFFFF",
                                  "paddingHorizontal": 15,
                                  "paddingVertical": 10,
                                },
                                Object {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Object {
                                  "marginRight": 15,
                                }
                              }
                            >
                              <View
                                style={Object {}}
                              >
                                <Text
                                  accessible={true}
                                  allowFontScaling={true}
                                  ellipsizeMode="tail"
                                  numberOfLines={1}
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "rgba(255, 255, 255, 0)",
                                        "color": "rgb(30, 30, 30)",
                                        "fontSize": 14,
                                        "fontWeight": "300",
                                      },
                                      undefined,
                                    ]
                                  }
                                >
                                  Sign in
                                </Text>
                              </View>
                            </View>
                            <View
                              style={
                                Object {
                                  "flex": 1,
                                }
                              }
                            >
                              <View
                                style={
                                  Object {
                                    "alignItems": "flex-end",
                                    "flex": 1,
                                    "justifyContent": "center",
                                  }
                                }
                              >
                                <Text
                                  accessible={true}
                                  allowFontScaling={false}
                                  ellipsizeMode="tail"
                                  style={
                                    Array [
                                      Object {
                                        "color": "#999999",
                                        "fontSize": 16,
                                      },
                                      undefined,
                                      Object {
                                        "fontFamily": "Material Icons",
                                        "fontStyle": "normal",
                                        "fontWeight": "normal",
                                      },
                                    ]
                                  }
                                >
                                  
                                </Text>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "paddingVertical": 15,
                        },
                        undefined,
                        Object {
                          "marginBottom": 7.5,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "paddingHorizontal": 15,
                          "paddingVertical": 7.5,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "backgroundColor": "rgba(255, 255, 255, 0)",
                            "color": "#000000",
                            "fontSize": 14,
                            "fontWeight": "600",
                          }
                        }
                      >
                        Legal
                      </Text>
                    </View>
                    <View
                      style={Object {}}
                    >
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flexBasis": 150,
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "paddingHorizontal": 15,
                                "paddingVertical": 10,
                              },
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "marginRight": 15,
                              }
                            }
                          >
                            <View
                              style={Object {}}
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "rgba(255, 255, 255, 0)",
                                      "color": "rgb(30, 30, 30)",
                                      "fontSize": 14,
                                      "fontWeight": "300",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Privacy policy
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={false}
                                ellipsizeMode="tail"
                                style={
                                  Array [
                                    Object {
                                      "color": "#999999",
                                      "fontSize": 16,
                                    },
                                    undefined,
                                    Object {
                                      "fontFamily": "Material Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                      <View
                        accessible={true}
                        isTVSelectable={true}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "flexBasis": 150,
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "backgroundColor": "#FFFFFF",
                                "paddingHorizontal": 15,
                                "paddingVertical": 10,
                              },
                              Object {
                                "alignItems": "center",
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                              },
                            ]
                          }
                        >
                          <View
                            style={
                              Object {
                                "marginRight": 15,
                              }
                            }
                          >
                            <View
                              style={Object {}}
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={true}
                                ellipsizeMode="tail"
                                numberOfLines={1}
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "rgba(255, 255, 255, 0)",
                                      "color": "rgb(30, 30, 30)",
                                      "fontSize": 14,
                                      "fontWeight": "300",
                                    },
                                    undefined,
                                  ]
                                }
                              >
                                Terms and conditions
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "flex": 1,
                              }
                            }
                          >
                            <View
                              style={
                                Object {
                                  "alignItems": "flex-end",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <Text
                                accessible={true}
                                allowFontScaling={false}
                                ellipsizeMode="tail"
                                style={
                                  Array [
                                    Object {
                                      "color": "#999999",
                                      "fontSize": 16,
                                    },
                                    undefined,
                                    Object {
                                      "fontFamily": "Material Icons",
                                      "fontStyle": "normal",
                                      "fontWeight": "normal",
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "marginVertical": 7.5,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "backgroundColor": "rgba(255, 255, 255, 0)",
                          "color": "#999999",
                          "fontSize": 12,
                          "fontWeight": "300",
                        }
                      }
                    >
                      Build 9999
                    </Text>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
